@@ -8,18 +8,18 @@ package org.camunda.optimize.service.process.archive;
 import lombok.SneakyThrows;
 import org.camunda.optimize.AbstractPlatformIT;
 import org.camunda.optimize.service.archive.ProcessInstanceArchivingService;
-import org.camunda.optimize.service.db.es.schema.index.ProcessInstanceArchiveIndexES;
 import org.camunda.optimize.service.db.DatabaseConstants;
-import org.elasticsearch.client.indices.GetIndexRequest;
+import org.camunda.optimize.service.db.es.schema.index.ProcessInstanceArchiveIndexES;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.camunda.optimize.AbstractIT.OPENSEARCH_PASSING;
 import static org.camunda.optimize.util.BpmnModels.getSimpleBpmnDiagram;
 
+@Tag(OPENSEARCH_PASSING)
 public class ProcessInstanceArchivingServiceIT extends AbstractPlatformIT {
 
   @Test
@@ -45,6 +45,11 @@ public class ProcessInstanceArchivingServiceIT extends AbstractPlatformIT {
     }
   }
 
+  @Tag(OPENSEARCH_SINGLE_TEST_FAIL_OK)
+  /**
+   * Fails due to missing implementation in
+   * org.camunda.optimize.service.db.os.reader.ProcessInstanceReaderOS#getExistingProcessDefinitionKeysFromInstances()
+   */
   @Test
   public void processInstanceArchiverCreatesMissingArchiveIndices() {
     // given
@@ -86,14 +91,11 @@ public class ProcessInstanceArchivingServiceIT extends AbstractPlatformIT {
 
   @SneakyThrows
   private List<String> getAllProcessInstanceArchiveIndexNames() {
-    return Arrays.stream(
-        databaseIntegrationTestExtension.getOptimizeElasticsearchClient().getHighLevelClient()
-          .indices().get(
-            new GetIndexRequest("*"),
-            databaseIntegrationTestExtension.getOptimizeElasticsearchClient().requestOptions()
-          ).getIndices())
+    return databaseIntegrationTestExtension.getTestIndexRepository()
+      .getAllIndexNames()
+      .stream()
       .filter(index -> index.contains(DatabaseConstants.PROCESS_INSTANCE_ARCHIVE_INDEX_PREFIX))
-      .collect(Collectors.toList());
+      .toList();
   }
 
 }
